Feature : Hilt기반의 boilerplate 작성 - dagger2 -> hilt migration

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="">
+    app:startDestination="@id/homeFragment">
 
-    <!-- Add Fragment and Set Start Destination -->
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.jp.boilerplate.ui.home.HomeFragment"
+        android:label="" />
 </navigation>
